--- a/Generateur/index.html
+++ b/Generateur/index.html
@@ -11,8 +11,8 @@
 
     <div class="container">
       <h3>Génerateur de citations</h3>
-      <div id="quote" class="quote">//</div>
-      <button onclick="renderquotes" id="quoteBtn" class="btn">Nouvelle citation</button>
+      <div id="cite" class="quote"></div>
+      <button onclick="generatecite()" id="quoteBtn" class="btn">Nouvelle citation</button>
     </div>
     
     <script src="script.js"></script>
