--- a/Quizz/index.html
+++ b/Quizz/index.html
@@ -10,9 +10,10 @@
 
   <div class="container">
     <h3>Quizz Dev</h3>
-    <div id="quote" class="quote">//</div>
-    <button id="quoteBtn" class="btnT">TRUE</button>
-    <button id="quoteBtn" class="btnF">FALSE</button>
+    <div class="quote" id="question"></div>
+    <button id="true-btn" class="btnT" onclick="checkAnswer(true)">VRAI</button>
+    <button id="false-btn" class="btnF" onclick="checkAnswer(false)">FAUX</button>
+    <div class="result" id="result"></div>
   </div>
 
   <script src="index.js"></script>
