--- a/OTP generateur/index.html
+++ b/OTP generateur/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OTP Generator</title>
-    <!-- Google Fonts -->
+    <!-- Google Fonts  Download links-->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Stylesheet -->
+    <!-- Stylesheet link to the css file -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
       <button id="generateBtn">Generate OTP</button>
       <p id="otpDisplay"></p>
     </div>
-    <!-- Script -->
+    <!-- Script link to the js file -->
     <script src="index.js"></script>
   </body>
 </html>
