--- a/OTP generateur/index.html
+++ b/OTP generateur/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>OTP Generator</h1>
-      <button id="generateBtn">Generate OTP</button>
+      <h1>One Time Password Generator</h1>
       <p id="otpDisplay"></p>
+      <button id="generateBtn">Generate</button>
     </div>
     <!-- Script link to the js file -->
     <script src="index.js"></script>
